[package]
name = "grid_builder"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = { version = "0.5.1", optional = true }
rand = { version = "0.7.0", optional = true }
array-vec = "0.1.3"
parking_lot_core = "0.6.2"
chashmap = "2.2.2"

[features]
default = ["noise_based_generators"]
noise_based_generators = ["noise", "rand"]

[dev-dependencies]
image = "0.22.1"
